# arrow-cookbook

./: .asf.yaml  .gitignore  CONTRIBUTING.md  Makefile  README.rst  index.html  matomo.html
.github/: dependabot.yml
.github/workflows/: deploy_bookdown.yml  deploy_cookbooks.yml  deploy_development_cookbooks.yml  deploy_stable_cookbooks.yml  test_arrow_nightly_cookbook.yml  test_cookbooks.yml  test_cpp_cookbook.yml  test_cpp_cookbook_latest.yml  test_cpp_cookbook_stable.yml  test_java_cookbook.yml  test_java_cookbook_latest.yml  test_java_cookbook_stable.yml  test_java_linux_cookbook.yml  test_java_osx_cookbook.yml  test_javajni_cookbook.yml  test_python_cookbook.yml  test_python_cookbook_latest.yml  test_python_cookbook_stable.yml  test_r_cookbook.yml  test_r_cookbook_latest.yml  test_r_cookbook_stable.yml
.github/workflows/python/: test_python_cookbook.yml
.github/workflows/r/: test_r_cookbook.yml
cpp/: CONTRIBUTING.md  Makefile  basic.html  create.html  datasets.html  dev.yml  environment.yml  flight.html  genindex.html  index.html  make.bat  requirements.txt  search.html  searchindex.js
cpp/_sources/: datasets.rst.txt
cpp/_static/: alabaster.css
cpp/code/: .clang-tidy  .gitignore  CMakeLists.txt  basic_arrow.cc  common.cc  common.h  compute_fn.cc  creating_arrow_objects.cc  datasets.cc  flight.cc  main.cc
cpp/code/protos/: CMakeLists.txt
cpp/ext/: recipeext.py
cpp/source/: basic.rst  compute.rst  conf.py  create.rst  datasets.rst  flight.rst  index.rst
dev/cpp/: basic.html  create.html  datasets.html  flight.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
dev/cpp/_sources/: basic.rst.txt  create.rst.txt  index.rst.txt
dev/java/: avro.html  create.html  data.html  dataset.html  flight.html  genindex.html  index.html  io.html  jdbc.html  objects.inv  schema.html  search.html  searchindex.js  substrait.html
dev/java/_sources/: dataset.rst.txt  flight.rst.txt  io.rst.txt  substrait.rst.txt
dev/java/_static/: alabaster.css
dev/py/: create.html  data.html  flight.html  genindex.html  index.html  io.html  objects.inv  schema.html  search.html  searchindex.js
dev/py/_sources/: index.rst.txt
dev/r/: 404.html  creating-arrow-objects.html  defining-data-types.html  flight.html  index.html  manipulating-data---arrays.html  manipulating-data---tables.html  reading-and-writing-data---multiple-files.html  reading-and-writing-data---single-files.html  reference-keys.txt  search_index.json  using-pyarrow-from-r.html
dev/release/: 01-bump-versions.sh  01-prepare.sh  02-update.sh  README.md  requirements.txt  utils-prepare.sh
go/: CONTRIBUTING.rst
go/source/: create.rst
java/: CONTRIBUTING.rst  Makefile  avro.html  create.html  data.html  dataset.html  flight.html  genindex.html  index.html  io.html  jdbc.html  make.bat  objects.inv  requirements.txt  schema.html  search.html  searchindex.js  substrait.html
java/_sources/: create.rst.txt  data.rst.txt  dataset.rst.txt  flight.rst.txt  index.rst.txt  schema.rst.txt
java/ext/: javadoctest.py
java/source/: avro.rst  c_data.rst  cdata.rst  cdatainterface.rst  conf.py  create.rst  data.rst  dataset.rst  flight.rst  flight_sql.rst  index.rst  indexwithjni.rst  indexwithoutjni.rst  io.rst  jdbc.rst  jni.rst  python_java.rst  schema.rst  substrait.rst  usecase.rst
java/source/_templates/: layout.html
java/source/demo/: .cp.tmp  .cp.txt  pom.xml
java/source/demo/src/main/java/: Create.java  Data.java  Definition.java  Io.java
java/source/demo/src/main/java/create/: Cookbook.java  Util.java
java/source/demo/src/main/java/data/: Cookbook.java  Util.java
java/source/demo/src/main/java/definition/: Cookbook.java  Util.java
java/source/demo/src/main/java/flight/: Cookbook.java  ExampleFlightServer.java  InMemoryStore.java
java/source/demo/src/main/java/io/: Cookbook.java  (+1 more)
java/source/jni/: dataset.rst
java/source/others/: create.rst  schema.rst
java/thirdpartydeps/arrowfiles/: lz4.arrow  streaming.arrow
java/thirdpartydeps/avro/: user.avsc
java/thirdpartydeps/csv/: tech_acquisitions.csv
java/thirdpartydeps/database/: h2-ddl.sql  h2-dml.sql
java/thirdpartydeps/parquetfiles/: data1.parquet  data2.parquet  data3.parquet  data4_3rg_gzip.parquet
java/thirdpartydeps/tpch/: customer.parquet  nation.parquet
py/: create.html  data.html  flight.html  genindex.html  index.html  io.html  objects.inv  schema.html  search.html  searchindex.js
py/_sources/: create.rst.txt  data.rst.txt  index.rst.txt  io.rst.txt
py/_static/: alabaster.css
python/: CONTRIBUTING.rst  make.bat  requirements.txt
python/source/: conf.py  create.rst  data.rst  flight.rst  index.rst  io.rst  schema.rst
python/source/_templates/: layout.html
r/: 404.html  CONTRIBUTING.md  creating-arrow-objects.html  defining-data-types.html  flight.html  index.html  manipulating-data---arrays.html  manipulating-data---tables.html  reading-and-writing-data---multiple-files.html  reading-and-writing-data---single-files.html  reading-and-writing-data.html  reference-keys.txt  search_index.json  test.R  using-pyarrow-from-r.html
r/content/: 01-reading_and_writing_data.Rmd  02-some_code.Rmd  03-some_code_with_tests.Rmd  04-some_code_with_tests_failing.Rmd  05-more_code_with_tests_failing.Rmd  _bookdown.yml  appendix.Rmd  arrays.Rmd  compressed_data.Rmd  configure_arrow.Rmd  creating_arrow_objects.Rmd  datasets.Rmd  flight.Rmd  index.Rmd  manipulate_data_with_arrays.Rmd  manipulate_data_with_tables.Rmd  manipulating_data.Rmd  python.Rmd  reading_and_writing_data.Rmd  reading_and_writing_individual_files.Rmd  reading_and_writing_multifiles.Rmd  specify_data_types_and_schemas.Rmd  tables.Rmd  work_with_compressed_data.Rmd  work_with_data_in_different_formats.Rmd
r/content/unpublished/: create_arrow_objects_from_r.Rmd  cute_datasets.Rmd  manipulate_data.Rmd  specify_data_types_and_schemas.Rmd  work_with_arrow_in_both_python_and_r.Rmd  work_with_compressed_or_partitioned_data.Rmd  work_with_data_in_different_formats.Rmd
r/scripts/: install_dependencies.R  test.R
testdata/: airquality.parquet
(+5 files in other folders)
